--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
     <header>
         <div class="logo">
-            <!-- Your logo goes here -->
             <img src="DeLeonLab_logo w text.png" alt="DeLeon Lab Logo">
         </div>
         <h1>DeLeon Lab at UF Anthropology</h1>
@@ -20,18 +19,19 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
 
         <div class="main-content">
-            <p>Your text content goes here.</p>
-            
-            <iframe src="https://www.example.com" width="600" height="400" frameborder="0"></iframe>
+            <h1>Vertebrate Skulls</h1>
+
+            <iframe class="sketchfab" id="api-frame"></iframe>
             
             <!-- Add more iframes or content as needed -->
         </div>
     </div>
+
+     <script src="script.js"></script>
 </body>
 </html>
