--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
     </div>
 
+    <script src="https://static.sketchfab.com/api/sketchfab-viewer-1.12.1.js"></script>
      <script src="script.js"></script>
 </body>
 </html>
