--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
 
         <div class="main-content">
             <h1>Vertebrate Skulls</h1>
+            &nbsp;
+            <table>
+                <tr>
+                    <td width="50%>
+                        <iframe class="sketchfab" id="api-frame"></iframe>
+                    </td>
+                </tr>
+            </table>
 
-            <iframe class="sketchfab" id="api-frame"></iframe>
+            
             
             <!-- Add more iframes or content as needed -->
         </div>
