--- a/index.html
+++ b/index.html
@@ -26,16 +26,10 @@
         <div class="main-content">
             <h1>Vertebrate Skulls</h1>
             &nbsp;
-            <table>
-                <tr>
-                    <td width="50%>
-                        <iframe class="sketchfab" id="api-frame"></iframe>
-                    </td>
-                </tr>
-            </table>
-
-            
-            
+            <iframe class="sketchfab" id="api-frame"></iframe>
+            <i>Canis familiaris</i> (Dog)
+            <p>&nbsp;</p>
+  
             <!-- Add more iframes or content as needed -->
         </div>
     </div>
