--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1>Vertebrate Skulls</h1>
             &nbsp;
             <iframe class="sketchfab" id="api-frame"></iframe>
-            <i>Canis familiaris</i> (Dog)
+            <p></p><i>Canis familiaris</i> (Dog)</p>
             <p>&nbsp;</p>
   
             <!-- Add more iframes or content as needed -->
