--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="main-content">
             <h1>Vertebrate Skulls</h1>
             &nbsp;
-            <iframe class="sketchfab" id="api-frame"></iframe>
+            <iframe class="sketchfab" id="api-frame" width="50%" height="300"></iframe>
             <p></p><i>Canis familiaris</i> (Dog)</p>
             <p>&nbsp;</p>
   
