--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         <div class="main-content">
             <h1>Vertebrate Skulls</h1>
             &nbsp;
-            <iframe class="sketchfab" id="api-frame" width="600" height="300"></iframe>
-            <p></p><i>Canis familiaris</i> (Dog)</p>
+            <table><
+                <iframe class="sketchfab" id="api-frame" width="500" height="300"></iframe>
+                <p></p><i>Canis familiaris</i> (Dog)</p>
+            </table>
             <p>&nbsp;</p>
   
             <!-- Add more iframes or content as needed -->
