--- a/index.html
+++ b/index.html
@@ -26,11 +26,17 @@
         <div class="main-content">
             <h1>Vertebrate Skulls</h1>
             &nbsp;
-            <table><
-                <iframe class="sketchfab" id="api-frame" width="500" height="300"></iframe>
-                <p></p><i>Canis familiaris</i> (Dog)</p>
-            </table>
-            <p>&nbsp;</p>
+            <table border="0">
+            <tr>
+            <td><iframe class="sketchfab" id="api-frame-dog" width="500" height="300"></iframe></td>
+            <td><i>Canis familiaris</i> (Dog)</td>
+        </tr>
+        <tr>
+            <td><iframe class="sketchfab" id="api-frame-other" width="500" height="300"></iframe></td>
+            <td>Another model</td>
+        </tr>
+    </table>
+         <p>&nbsp;</p>
   
             <!-- Add more iframes or content as needed -->
         </div>
