--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Your Website Title</title>
+    <title>DeLeon Lab at UF Anthropology</title>
 </head>
 <body>
     <header>
@@ -29,10 +29,10 @@
             <table border="0">
             <tr>
             <td><iframe class="sketchfab" id="api-frame-dog" width="500" height="300"></iframe></td>
-            <td><i>Canis familiaris</i> (Dog)</td>
+            <td><iframe class="sketchfab" id="api-frame-other" width="500" height="300"></iframe></td>
         </tr>
         <tr>
-            <td><iframe class="sketchfab" id="api-frame-other" width="500" height="300"></iframe></td>
+            <td><i>Canis familiaris</i> (Dog)</td>
             <td>Another model</td>
         </tr>
     </table>
