--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <div class="main-content">
             <h1>Vertebrate Skulls</h1>
             &nbsp;
+
+// Models are housed in a table, with a row of two models and a row of two labels, repeated.
+// Adding new models requires adding iframes with new "id" attributes that call to names in script.js.
             <table border="0">
             <tr>
             <td><iframe class="sketchfab" id="api-frame-dog" width="500" height="300"></iframe></td>
@@ -43,6 +46,6 @@
     </div>
 
     <script src="https://static.sketchfab.com/api/sketchfab-viewer-1.12.1.js"></script>
-     <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
