--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
             <h1>Vertebrate Skulls</h1>
             &nbsp;
 
-// Models are housed in a table, with a row of two models and a row of two labels, repeated.
-// Adding new models requires adding iframes with new "id" attributes that call to names in script.js.
+<!-- Models are housed in a table, with a row of two models and a row of two labels, repeated. -->
+<!-- Adding new models requires adding iframes with new "id" attributes that call to names in script.js. -->
+            
             <table border="0">
             <tr>
             <td><iframe class="sketchfab" id="api-frame-dog" width="500" height="300"></iframe></td>
