--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <td><iframe class="sketchfab" id="api-frame-other" width="500" height="300"></iframe></td>
         </tr>
         <tr>
-            <td><i>Canis familiaris</i> (Dog)</td>
+            <td><i>Canis familiaris</i> (Dog)
+            <p> Click on model to view endocranial base</p></td>
             <td>Another model</td>
         </tr>
     </table>
