--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <td><iframe class="sketchfab" id="api-frame-other" width="500" height="300"></iframe></td>
         </tr>
         <tr>
-            <td><i>Canis familiaris</i> (Dog)
-            <p> Click on model to view endocranial base</p></td>
+            <td>* <i>Canis familiaris</i> (Dog)</td>
             <td>Another model</td>
         </tr>
+        <tr>* Click on model to view endocranial base</tr>
     </table>
          <p>&nbsp;</p>
   
