--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <!-- Models are housed in a table, with a row of two models and a row of two labels, repeated. -->
 <!-- Adding new models requires adding iframes with new "id" attributes that call to names in script.js. -->
             
-            <table border="0">
-            <tr>
+        <table border="0">
+        <tr>
             <td><iframe class="sketchfab" id="api-frame-dog" width="500" height="300"></iframe></td>
             <td><iframe class="sketchfab" id="api-frame-other" width="500" height="300"></iframe></td>
         </tr>
@@ -39,8 +39,10 @@
             <td>* <i>Canis familiaris</i> (Dog)</td>
             <td>Another model</td>
         </tr>
-        <tr>* Click on model to view endocranial base</tr>
-    </table>
+        <tr>
+            <td>* Click on model to view endocranial base</td>
+        </tr>
+        </table>
          <p>&nbsp;</p>
   
             <!-- Add more iframes or content as needed -->
