--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+do<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,8 +18,11 @@
         <nav class="navigation">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Endocrania</a></li>
+                <li><a href="#">Sphenoids</a></li>
+                <li><a href="#">Primates</a></li>
+                <li><a href="#">Bats</a></li>
+                <li><a href="#">Nasal Capsules</a></li>
             </ul>
         </nav>
 
