--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@ do<!DOCTYPE html>
 </head>
 <body>
     <header>
+        <h1>Vertebrate Skulls</h1>
+        <h1 text-align: right>DeLeon Lab at UF Anthropology</h1>h1>
         <div class="logo">
             <img src="DeLeonLab_logo w text.png" alt="DeLeon Lab Logo">
         </div>
-        <h1>DeLeon Lab at UF Anthropology</h1>
     </header>
 
     <div class="container">
