--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Vertebrate Skulls</h1>
-        <h1 text-align: right>DeLeon Lab at UF Anthropology</h1>h1>
+        <h1 align="right">DeLeon Lab at UF Anthropology</h1>
         <div class="logo">
             <img src="DeLeonLab_logo w text.png" alt="DeLeon Lab Logo">
         </div>
