--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Vertebrate Skulls</h1>
         <h1 align="right">DeLeon Lab at UF Anthropology</h1>
         <div class="logo">
-            <img src="DeLeonLab_logo w text.png" alt="DeLeon Lab Logo">
+            <img src="DeLeonLab_logo w text.png" align="right" alt="DeLeon Lab Logo">
         </div>
     </header>
 
