--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Vertebrate Skulls</h1>
-        <h1 align="right">DeLeon Lab at UF Anthropology</h1>
+        <h1>DeLeon Lab at UF Anthropology
         <div class="logo">
             <img src="DeLeonLab_logo w text.png" align="right" alt="DeLeon Lab Logo">
-        </div>
+        </div></h1>
+        <h1>Vertebrate Skulls</h1>
     </header>
 
     <div class="container">
