Create example Aotus page
Includes edits to most files

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Endocrania</a></li>
                 <li><a href="#">Sphenoids</a></li>
-                <li><a href="#">Primates</a></li>
+                <li><a href="primates.html">Primates</a></li>
                 <li><a href="#">Bats</a></li>
                 <li><a href="#">Nasal Capsules</a></li>
             </ul>
