--- a/primates.html
+++ b/primates.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>DeLeon Lab in UF Anthropology</title>
 </head>
 <body>
@@ -100,6 +100,6 @@
 
 
     <script src="https://static.sketchfab.com/api/sketchfab-viewer-1.12.1.js"></script>
-    <script src="Aotus_taxon_script.js"></script>
+    <script src="js/Aotus_taxon_script.js"></script>
 </body>
 </html>
