Update images path

--- a/primates.html
+++ b/primates.html
@@ -10,7 +10,7 @@
     <header>
         <h1>DeLeon Lab at UF Anthropology
         <div class="logo">
-            <img src="DeLeonLab_logo w text.png" align="right" alt="DeLeon Lab Logo">
+            <img src="images/DeLeonLab_logo w text.png" align="right" alt="DeLeon Lab Logo">
         </div></h1>
         <h1>Vertebrate Skulls</h1>
     </header>
