--- a/primates.html
+++ b/primates.html
@@ -18,16 +18,16 @@
     <div class="container">
         <nav class="navigation">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Endocrania</a></li>
                 <li><a href="#">Sphenoids</a></li>
-                <li><a href="#">Primates</a></li>
+                <li><a href="primates.html" class="active">Primates</a></li>
                 <li><a href="#">Bats</a></li>
                 <li><a href="#">Nasal Capsules</a></li>
             </ul>
         </nav>
 
-        <div class="main-content">
+    <div class="main-content">
             
 
 	<h2><i>Aotus nancymaae</i></h2>
@@ -48,7 +48,7 @@
         </div>
 
         <div class="media">
-          <img src="images/Aotus_photo.jpg" alt="Colorful, close-up photo of a family of Aotus nancymaae in a tree"></img>
+          <img src="images/Aotus_photo.jpg" alt="Colorful, close-up photo of a family of Aotus nancymaae in a tree">
           <figcaption>Photo provided by iNaturalist user <i>Sieg</i> under CC4.0-BY-NC (https://www.inaturalist.org/photos/50511485)</figcaption>
         </div>
       </div>
