--- a/primates.html
+++ b/primates.html
@@ -32,27 +32,24 @@
 
 	<h2><i>Aotus nancymaae</i></h2>
 
-	&nbsp;
-
 <!-- Content is stored in components for modular structure. -->
-<!-- Adding new models requires adding iframes with new "id" attributes that call to names in script.js. -->
+<!-- Adding new models requires adding iframes with new "id" attributes that call to names in associated script.js. -->
             
 <section class="component">
-      <div class="component-content">
-        <div class="text">
-	<h3>Meet the Night Monkeys (Genus <i>Aotus</i>)</h3>
-        <p>Hidden in the moonlit forests of Central and South America, the night monkeys—also known as Aotus or owl monkeys—are the only truly nocturnal monkeys in the world. Found from Panama down through the Amazon Basin into northern Argentina, these small primates have evolved to thrive in the shadows of the rainforest. Their oversized eyes, adapted for low light, give them an owlish look—and an edge in the dark.
-	<p>Roughly the size of a kitten, night monkeys weigh just 1 to 2.5 pounds and live high in the canopy, navigating by stealth and sight rather than sound. Their home ranges vary by region but often include humid lowland and montane forests, where dense cover provides protection and plenty to eat.
-	<p>Their diet is largely frugivorous—ripe fruits are their favorite—but they’ll also munch on leaves, nectar, and insects, making them opportunistic feeders. Living in small, monogamous family groups, they’re known for strong pair bonds and devoted parenting. Both male and female share the work of raising a single infant at a time, with dads often carrying the baby between feedings.
-</p>
-        </div>
+  <div class="component-content">
+    <div class="text">
+      <h3>Meet the Night Monkeys (Genus <i>Aotus</i>)</h3>
+      <p>Hidden in the moonlit forests of Central and South America, the night monkeys—also known as Aotus or owl monkeys—are the only truly nocturnal monkeys in the world. Found from Panama down through the Amazon Basin into northern Argentina, these small primates have evolved to thrive in the shadows of the rainforest. Their oversized eyes, adapted for low light, give them an owlish look—and an edge in the dark.</p>
+      <p>Roughly the size of a kitten, night monkeys weigh just 1 to 2.5 pounds and live high in the canopy, navigating by stealth and sight rather than sound. Their home ranges vary by region but often include humid lowland and montane forests, where dense cover provides protection and plenty to eat.</p>
+      <p>Their diet is largely frugivorous—ripe fruits are their favorite—but they’ll also munch on leaves, nectar, and insects, making them opportunistic feeders. Living in small, monogamous family groups, they’re known for strong pair bonds and devoted parenting. Both male and female share the work of raising a single infant at a time, with dads often carrying the baby between feedings.</p>
+    </div>
 
-        <div class="media">
-          <img src="images/Aotus_photo.jpg" alt="Colorful, close-up photo of a family of Aotus nancymaae in a tree">
-          <figcaption>Photo provided by iNaturalist user <i>Sieg</i> under CC4.0-BY-NC (https://www.inaturalist.org/photos/50511485)</figcaption>
-        </div>
-      </div>
-    </section>
+    <figure class="media">
+      <img src="images/Aotus_photo.jpg" alt="Colorful, close-up photo of a family of Aotus nancymaae in a tree">
+      <figcaption>Photo provided by iNaturalist user <i>Sieg</i> under CC4.0-BY-NC (<a href="https://www.inaturalist.org/photos/50511485" target="_blank">source</a>)</figcaption>
+    </figure>
+  </div>
+</section>
 
 <section class="component">
       <div class="component-content">
