--- a/primates.html
+++ b/primates.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,20 +16,28 @@
         <h1>Vertebrate Skulls</h1>
     </header>
 
-    <div class="container">
-        <nav class="navigation">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Endocrania</a></li>
-                <li><a href="#">Sphenoids</a></li>
-                <li><a href="primates.html" class="active">Primates</a></li>
-                <li><a href="#">Bats</a></li>
-                <li><a href="#">Nasal Capsules</a></li>
-            </ul>
-        </nav>
 
-    <div class="main-content">
-            
+<header>
+  <div class="header-top">
+	<div class="logo">
+      		<img src="images/DeLeonLab_logo w text.png" alt="DeLeon Lab logo">
+    	</div>
+   	 <div class="title">
+      		<h1>DeLeon Lab at UF Anthropology</h1>    
+	</div>
+  </div>
+
+  <nav class="navbar"> 
+	<a href="index.html">Home</a>
+	<a href="#">Endocrania</a>
+	<a href="#">Sphenoids</a>
+	<a href="primates.html" class="active">Primates</a>
+	<a href="#">Bats</a>
+	<a href="#">Nasal Capsules</a>
+  </nav>
+</header>
+
+<main class="main-content">            
 
 	<h2><i>Aotus nancymaae</i></h2>
 
@@ -98,5 +107,6 @@
 
     <script src="https://static.sketchfab.com/api/sketchfab-viewer-1.12.1.js"></script>
     <script src="js/Aotus_taxon_script.js"></script>
+</main>
 </body>
 </html>
