--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <nav class="navigation">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="#">Endocrania</a></li>
                 <li><a href="#">Sphenoids</a></li>
                 <li><a href="primates.html">Primates</a></li>
