--- a/primates.html
+++ b/primates.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,31 +10,26 @@
     <header>
         <h1>DeLeon Lab at UF Anthropology
         <div class="logo">
-            <img src="images/DeLeonLab_logo w text.png" align="right" alt="DeLeon Lab Logo">
+            <img src="DeLeonLab_logo w text.png" align="right" alt="DeLeon Lab Logo">
         </div></h1>
         <h1>Vertebrate Skulls</h1>
     </header>
 
 
-<header>
-  <div class="header-top">
-	<div class="logo">
-      		<img src="images/DeLeonLab_logo w text.png" alt="DeLeon Lab logo">
-    	</div>
-   	 <div class="title">
-      		<h1>DeLeon Lab at UF Anthropology</h1>    
-	</div>
-  </div>
+    <div class="container">
+        <nav class="navigation">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Endocrania</a></li>
+                <li><a href="#">Sphenoids</a></li>
+                <li><a href="primates.html" class="active">Primates</a></li>
+                <li><a href="#">Bats</a></li>
+                <li><a href="#">Nasal Capsules</a></li>
+            </ul>
+        </nav>
 
-  <nav class="navbar"> 
-	<a href="index.html">Home</a>
-	<a href="#">Endocrania</a>
-	<a href="#">Sphenoids</a>
-	<a href="primates.html" class="active">Primates</a>
-	<a href="#">Bats</a>
-	<a href="#">Nasal Capsules</a>
-  </nav>
-</header>
+        <div class="main-content">
+            &nbsp;
 
 <main class="main-content">            
 
