Create a submenu on navbar

--- a/index.html
+++ b/index.html
@@ -21,11 +21,20 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="#">Endocrania</a></li>
                 <li><a href="#">Sphenoids</a></li>
-                <li><a href="primates.html">Primates</a></li>
+                <li><a href="primates.html">Primates</a>
+			 <ul class="submenu">
+     			   <li><a href="aotus.html">Aotus (Night Monkeys)</a></li>
+     			   <li><a href="cebus.html">Cebus (Capuchins)</a></li>
+    			   <li><a href="macaca.html">Macaca (Macaques)</a></li>
+   			   <li><a href="pan.html">Pan (Chimpanzees)</a></li>
+      			   </ul>
+
+			</li>
                 <li><a href="#">Bats</a></li>
                 <li><a href="#">Nasal Capsules</a></li>
             </ul>
         </nav>
+
 
         <div class="main-content">
             &nbsp;
