Update Aotus page

--- a/aotus.html
+++ b/aotus.html
@@ -24,7 +24,7 @@
                 <li><a href="#">Sphenoids</a></li>
                 <li><a href="primates.html" class="active">Primates</a>
 			 <ul class="submenu">
-     			   <li><a href="aotus.html">Aotus (Night Monkeys)</a></li>
+     			   <li><a href="aotus.html">Aotus (Owl Monkeys)</a></li>
      			   <li><a href="cebus.html">Cebus (Capuchins)</a></li>
     			   <li><a href="macaca.html">Macaca (Macaques)</a></li>
    			   <li><a href="pan.html">Pan (Chimpanzees)</a></li>
@@ -49,10 +49,9 @@
 <section class="component">
   <div class="component-content">
     <div class="text">
-      <h3>Meet the Night Monkeys (Genus <i>Aotus</i>)</h3>
-      <p>Hidden in the moonlit forests of Central and South America, the night monkeys—also known as Aotus or owl monkeys—are the only truly nocturnal monkeys in the world. Found from Panama down through the Amazon Basin into northern Argentina, these small primates have evolved to thrive in the shadows of the rainforest. Their oversized eyes, adapted for low light, give them an owlish look—and an edge in the dark.</p>
-      <p>Roughly the size of a kitten, night monkeys weigh just 1 to 2.5 pounds and live high in the canopy, navigating by stealth and sight rather than sound. Their home ranges vary by region but often include humid lowland and montane forests, where dense cover provides protection and plenty to eat.</p>
-      <p>Their diet is largely frugivorous—ripe fruits are their favorite—but they’ll also munch on leaves, nectar, and insects, making them opportunistic feeders. Living in small, monogamous family groups, they’re known for strong pair bonds and devoted parenting. Both male and female share the work of raising a single infant at a time, with dads often carrying the baby between feedings.</p>
+      <p>Hidden in the moonlit forests of Central and South America, <i>Aotus nancymaae</i> (also known as owl monkeys or night monkeys) are the only truly nocturnal monkeys in the world. Found from Panama down through the Amazon Basin into northern Argentina, these small primates have evolved to thrive in the shadows of the rainforest. Their oversized eyes, adapted for low light, give them an owlish look—and an edge in the dark.</p>
+      <p>Roughly the size of a kitten, night monkeys weigh just 1 to 2.5 pounds and live high in the tree canopy, navigating by stealth and sight rather than sound. Their home ranges vary by region but often include humid lowland and montane forests, where dense cover provides protection and plenty to eat.</p>
+      <p>Their diet is largely frugivorous (ripe fruits are their favorite), but they’ll also eat leaves, nectar, and insects, making them opportunistic feeders. Living in small, monogamous family groups, they’re known for strong pair bonds and devoted parenting. Both male and female share the work of raising a single infant at a time, with dads often carrying the baby between feedings.</p>
     </div>
 
     <figure class="media">
@@ -66,12 +65,12 @@
       <div class="component-content">
         <div class="text">
           <h3>The Distinctive Skull of <i>Aotus nancymaae</i></h3>
-          <p>Night monkeys (<i>Aotus</i>) have uniquely adapted skulls that reflect their nocturnal lifestyle. Their large, forward-facing orbits are among the largest relative to skull size of any monkey, maximizing light capture for night vision. The skull is short and rounded, with reduced bony ridges, reflecting their smaller jaw muscles compared to diurnal primates. This combination of traits—big eyes, small faces, and simplified chewing anatomy—makes the Aotus skull instantly recognizable and perfectly suited for life in the dark.
+          <p>Owl monkeys (<i>Aotus</i>) have uniquely adapted skulls that reflect their nocturnal lifestyle. Their large, forward-facing orbits are among the largest relative to skull size of any monkey, maximizing light capture for night vision. The skull is short and rounded, with reduced bony ridges, reflecting their smaller jaw muscles compared to many other primates. This combination of traits—big eyes, small faces, and simplified chewing anatomy—makes the Aotus skull instantly recognizable and perfectly suited for life in the dark.
 </p>
         </div>
 
         <div class="media">
-          <iframe class="sketchfab" id="api-frame-dog" width="500" height="300"></iframe>
+          <iframe class="sketchfab" id="DWA-Aotus1_Taxon" width="500" height="300"></iframe>
           <figcaption>Skull of adult <i>Aotus nancymaae</i> (DWA-Aotus1).</figcaption>
         </div>
       </div>
@@ -80,29 +79,29 @@
 <section class="component">
       <div class="component-content">
         <div class="text">
-          <h2>First Component</h2>
-          <p>This is a text block beside the iframe.</p>
+          <h3>Juvenile <i>Aotus</i> Skull</h3>
+          <p>At three months of age, the extreme adaptation for large eyes already has remarkable influences on the skull. The eye sockets are already strikingly large. Expansion of the eyeballs has pressed the orbitosphenoid back against the alisphenoid, fusing those parts of the sphenoid together. In the lateral wall of the orbit, the parietal has been incorporated due to posterior expansion of this space. In the medial wall of the orbit, the ethmoid has been pressed against the vomer and has become fused. Other sutures are open, especially across the forehead and jaw, allowing for continued brain and facial growth. Compared to adults, juvenile skulls have a more domed cranium and a relatively short snout.</p>
         </div>
 
         <div class="media">
-          <iframe src="https://example.com" title="Example iframe"></iframe>
-          <figcaption>Example iframe caption</figcaption>
+          <iframe class="sketchfab" id="Aotus107_Taxon" width="500" height="300"></iframe>
+          <figcaption>Skull of juvenile <i>Aotus nancymaae</i> (Aotus107).</figcaption>
         </div>
+
       </div>
     </section>
 
 <section class="component">
       <div class="component-content">
         <div class="text">
-          <h2>First Component</h2>
-          <p>This is a text block beside the iframe.</p>
+          <h3>Newborn <i>Aotus</i> Skull</h3>
+          <p>A newborn Aotus skull is remarkably rounded with an oversized braincase and enormous orbits already adapted for seeing in the dark, even before the eyes fully open. The face is extremely short and flat, and the jaw is underdeveloped, suited for a milk-only diet. Many of the bones are still soft and unfused, with fontanelles and wide sutures allowing for rapid brain growth. The sheer size of the eye sockets at birth is a standout trait, reflecting the early importance of nocturnal vision in these tiny primates.</p>
         </div>
 
         <div class="media">
-          <iframe src="https://example.com" title="Example iframe"></iframe>
-          <figcaption>Example iframe caption</figcaption>
-        </div>
-      </div>
+          <iframe class="sketchfab" id="Aotus108_Taxon" width="500" height="300"></iframe>
+          <figcaption>Skull of newborn <i>Aotus nancymaae</i> (Aotus108).</figcaption>
+	</div>
     </section>
 
 
