--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>DeLeon Lab at UF Anthropology
         <div class="logo">
-            <img src="DeLeonLab_logo w text.png" align="right" alt="DeLeon Lab Logo">
+            <img src="images/DeLeonLab_logo w text.png" align="right" alt="DeLeon Lab Logo">
         </div></h1>
         <h1>Vertebrate Skulls</h1>
     </header>
@@ -21,9 +21,9 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="#">Endocrania</a></li>
                 <li><a href="#">Sphenoids</a></li>
-                <li><a href="primates.html">Primates</a>
+                <li><a href="#">Primates</a>
 			 <ul class="submenu">
-     			   <li><a href="aotus.html">Aotus (Night Monkeys)</a></li>
+     			   <li><a href="aotus.html">Aotus (Owl Monkeys)</a></li>
      			   <li><a href="cebus.html">Cebus (Capuchins)</a></li>
     			   <li><a href="macaca.html">Macaca (Macaques)</a></li>
    			   <li><a href="pan.html">Pan (Chimpanzees)</a></li>
