Aotus page troubleshoot

--- a/aotus.html
+++ b/aotus.html
@@ -7,14 +7,18 @@
     <title>DeLeon Lab in UF Anthropology</title>
 </head>
 <body>
-    <header>
-        <h1>DeLeon Lab at UF Anthropology
-        <div class="logo">
-            <img src="images/DeLeonLab_logo w text.png" align="right" alt="DeLeon Lab Logo">
-        </div></h1>
-        <h1>Vertebrate Skulls</h1>
-    </header>
+ <header>
+    <div class="header-row">
+      <div class="title">
+        <h1>DeLeon Lab at UF Anthropology</h1>
+        <h2>Vertebrate Skulls</h2>
+      </div>
 
+      <div class="logo">
+        <img src="images/DeLeonLab_logo w text.png" alt="DeLeon Lab Logo">
+      </div>
+    </div>
+  </header>
 
     <div class="container">
         <nav class="navigation">
