--- a/aotus.html
+++ b/aotus.html
@@ -103,6 +103,7 @@
           <iframe class="sketchfab" id="Aotus108_Taxon" width="500" height="300"></iframe>
           <figcaption>Skull of newborn <i>Aotus nancymaae</i> (Aotus108).</figcaption>
 	</div>
+	</div>
     </section>
 
 
