--- a/aotus.html
+++ b/aotus.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="media">
-          <iframe class="sketchfab" id="DWA-Aotus1_Taxon" width="500" height="300"></iframe>
+          <iframe class="sketchfab" id="DWA-Aotus1_Taxon"></iframe>
           <figcaption>Skull of adult <i>Aotus nancymaae</i> (DWA-Aotus1).</figcaption>
         </div>
       </div>
@@ -85,7 +85,7 @@
         </div>
 
         <div class="media">
-          <iframe class="sketchfab" id="Aotus107_Taxon" width="500" height="300"></iframe>
+          <iframe class="sketchfab" id="Aotus107_Taxon"></iframe>
           <figcaption>Skull of juvenile <i>Aotus nancymaae</i> (Aotus107).</figcaption>
         </div>
 
@@ -100,7 +100,7 @@
         </div>
 
         <div class="media">
-          <iframe class="sketchfab" id="Aotus108_Taxon" width="500" height="300"></iframe>
+          <iframe class="sketchfab" id="Aotus108_Taxon"></iframe>
           <figcaption>Skull of newborn <i>Aotus nancymaae</i> (Aotus108).</figcaption>
 	</div>
 	</div>
