--- a/aotus.html
+++ b/aotus.html
@@ -110,6 +110,7 @@
 <div class="text">
 	<h3>Do You Want to Learn More?</h3>
 	<a href="Aotus_Teeth.html">Tooth Development in <i>Aotus</i></a>
+</div>
 
     <script src="https://static.sketchfab.com/api/sketchfab-viewer-1.12.1.js"></script>
     <script src="js/Aotus_taxon_script.js"></script>
