--- a/aotus.html
+++ b/aotus.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Lato:wght@400;600&display=swap" rel="stylesheet">
     <title>DeLeon Lab in UF Anthropology</title>
 </head>
 <body>
@@ -107,9 +108,10 @@
 	</div>
     </section>
 
-<div class="text">
-	<h3>Do You Want to Learn More?</h3>
-	<a href="Aotus_Teeth.html">Tooth Development in <i>Aotus</i></a>
+<div class="callout-section">
+  <h2>Would you like to know more?</h2>
+  <p>Dive deeper into the science behind variation in the skull.</p>
+  <a href="/Aotus_Teeth.html" class="callout-link">Learn about the teeth of <em>Aotus</em></a>
 </div>
 
     <script src="https://static.sketchfab.com/api/sketchfab-viewer-1.12.1.js"></script>
