--- a/aotus.html
+++ b/aotus.html
@@ -111,7 +111,7 @@
 <div class="callout-section">
   <h2>Would you like to know more?</h2>
   <p>Dive deeper into the science behind variation in the skull.</p>
-  <a href="/Aotus_Teeth.html" class="callout-link">Learn about the teeth of <em>Aotus</em></a>
+  <a href="Aotus_Teeth.html" class="callout-link">Learn about the teeth of <em>Aotus</em></a>
 </div>
 
     <script src="https://static.sketchfab.com/api/sketchfab-viewer-1.12.1.js"></script>
