--- a/aotus.html
+++ b/aotus.html
@@ -108,12 +108,14 @@
 	</div>
     </section>
 
-<div class="accent-style">
+<div class="callout-section accent-style">
   <div class="accent-bar"></div>
   <div class="content">
     <h2>Would you like to know more?</h2>
     <p>Dive deeper into the science behind variation in the skull.</p>
-    <a href="Aotus_Teeth.html" class="callout-link">Learn about the teeth of <em>Aotus</em></a>
+    <a href="Aotus_Teeth.html" class="callout-link">
+      Learn about the teeth of <em>Aotus</em>
+    </a>
   </div>
 </div>
 
