Revert "Update CSS for callout section"
This reverts commit e513e9be3d8a6d7796488bfcdbc874c79123d77e.

--- a/aotus.html
+++ b/aotus.html
@@ -108,15 +108,10 @@
 	</div>
     </section>
 
-<div class="callout-section accent-style">
-  <div class="accent-bar"></div>
-  <div class="content">
-    <h2>Would you like to know more?</h2>
-    <p>Dive deeper into the science behind variation in the skull.</p>
-    <a href="Aotus_Teeth.html" class="callout-link">
-      Learn about the teeth of <em>Aotus</em>
-    </a>
-  </div>
+<div class="callout-section">
+  <h2>Would you like to know more?</h2>
+  <p>Dive deeper into the science behind variation in the skull.</p>
+  <a href="Aotus_Teeth.html" class="callout-link">Learn about the teeth of <em>Aotus</em></a>
 </div>
 
     <script src="https://static.sketchfab.com/api/sketchfab-viewer-1.12.1.js"></script>
