--- a/aotus.html
+++ b/aotus.html
@@ -108,16 +108,12 @@
 	</div>
     </section>
 
-<div class="accent-style">
-  <div class="accent-bar"></div>
-  <div class="content">
-    <h2>Would you like to know more?</h2>
-    <p>Dive deeper into the science behind variation in the skull.</p>
-    <a href="Aotus_Teeth.html" class="callout-link">
-      Learn about the teeth of <em>Aotus</em>
-    </a>
-  </div>
+<div class="callout-goldbanner">
+  <h2>Would you like to know more?</h2>
+  <p>Dive deeper into the science behind variation in the skull.</p>
+  <a href="Aotus_Teeth.html" class="callout-link">Learn about the teeth of <em>Aotus</em></a>
 </div>
+
 
     <script src="https://static.sketchfab.com/api/sketchfab-viewer-1.12.1.js"></script>
     <script src="js/Aotus_taxon_script.js"></script>
