--- a/Aotus_Teeth.html
+++ b/Aotus_Teeth.html
@@ -95,6 +95,14 @@
 	</div>
     </section>
 
+<div class="callout-goldbanner">
+  <h2>Would you like to know more?</h2>
+  <p>Dive deeper into the science behind variation in the skull.</p>
+  <p><a href="aotus.html" class="callout-link">Return to the overview of the skull in <em>Aotus</em></a></p>
+  <p><a href="Aotus_Colors.html" class="callout-link">Learn about the cranial bones in <em>Aotus</em></a></p>
+
+</div>
+
 
     <script src="https://static.sketchfab.com/api/sketchfab-viewer-1.12.1.js"></script>
     <script src="js/Aotus_teeth_script.js"></script>
