--- a/aotus.html
+++ b/aotus.html
@@ -111,7 +111,9 @@
 <div class="callout-goldbanner">
   <h2>Would you like to know more?</h2>
   <p>Dive deeper into the science behind variation in the skull.</p>
-  <a href="Aotus_Teeth.html" class="callout-link">Learn about the teeth of <em>Aotus</em></a>
+  <p><a href="Aotus_Teeth.html" class="callout-link">See how development of the teeth influences bone of the jaws in <em>Aotus</em></a></p>
+  <p><a href="Aotus_Colors.html" class="callout-link">Learn about the cranial bones in <em>Aotus</em></a></p>
+
 </div>
 
 
